[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/Levels/LevelManager-2.gd" type="Script" id=1]
[ext_resource path="res://src/UI/PauseMenu/PauseMenu.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/Levels/ParallaxScrollingAssets/City/2.png" type="Texture" id=3]
[ext_resource path="res://src/Levels/ParallaxScrollingAssets/City/3.png" type="Texture" id=4]
[ext_resource path="res://src/Levels/ParallaxScrollingAssets/City/1.png" type="Texture" id=5]
[ext_resource path="res://src/Utils/ProgressBar/HealthBar.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/Utils/ProgressBar/ChargeBar.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/Levels/Pause.gd" type="Script" id=8]

[sub_resource type="Environment" id=1]
background_mode = 4
tonemap_mode = 4
glow_enabled = true
glow_levels/1 = true
glow_levels/2 = true
glow_levels/4 = true
glow_levels/6 = true
glow_levels/7 = true
glow_blend_mode = 1
glow_bicubic_upscale = true
glow_high_quality = true

[node name="LevelManager" type="Node2D"]
script = ExtResource( 1 )

[node name="LevelContainer" type="Node2D" parent="."]

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0, 0 )
motion_mirroring = Vector2( 1920, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 0, -540 )
texture = ExtResource( 5 )
centered = false

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.2, -0.1 )
motion_mirroring = Vector2( 1915, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer2"]
position = Vector2( 0, -540 )
texture = ExtResource( 3 )
centered = false

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.5, 0 )
motion_mirroring = Vector2( 1915, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer3"]
position = Vector2( 0, -540 )
texture = ExtResource( 4 )
centered = false

[node name="UI" type="CanvasLayer" parent="."]

[node name="HealthBar" parent="UI" instance=ExtResource( 6 )]
margin_left = -244.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = 53.0

[node name="ChargeBar" parent="UI" instance=ExtResource( 7 )]
anchor_left = 0.0
anchor_right = 0.0
margin_left = 20.0
margin_top = 20.0
margin_right = 244.0
margin_bottom = 53.0

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="PauseMenu" type="CanvasLayer" parent="."]
layer = 100

[node name="Pause" type="Control" parent="PauseMenu"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 8 )

[node name="BlackOverlay" type="ColorRect" parent="PauseMenu/Pause"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0588235, 0.054902, 0.054902, 0.639216 )

[node name="PauseMenuPanel" parent="PauseMenu/Pause" instance=ExtResource( 2 )]
